--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:id="@+id/nav_map" android:icon="@android:drawable/ic_dialog_map"
+            android:title="Map" />
+        <item android:id="@+id/nav_profil" android:icon="@android:drawable/ic_menu_my_calendar"
+            android:title="Profil" />
+        <item android:id="@+id/nav_friends" android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="Friends" />
+        <item android:id="@+id/nav_ranking" android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:title="Ranking" />
+        <item android:id="@+id/nav_info" android:icon="@android:drawable/ic_menu_info_details"
+            android:title="Info" />
+        <item android:id="@+id/nav_help" android:icon="@android:drawable/ic_menu_help"
+            android:title="Help" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="">
         <menu>
-            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
+            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_close_clear_cancel"
+                android:title="Logout" />
         </menu>
     </item>
 
