--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -22,7 +22,8 @@
                     android:id="@+id/table_main"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true" >
+                    android:layout_centerHorizontal="true"
+                    >
                 </TableLayout>
             </RelativeLayout>
         </HorizontalScrollView>
