--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -48,7 +48,7 @@
                             android:layout_width="0px"
                             android:layout_height="wrap_content"
                             android:text="User"
-                            android:id="@+id/button"
+                            android:id="@+id/userButton"
                             android:layout_weight=".50"
                             android:layout_marginRight="-4.5dp"
                             android:layout_marginLeft="-4.5dp"
@@ -72,7 +72,7 @@
                             android:layout_width="0px"
                             android:layout_height="wrap_content"
                             android:text="Team"
-                            android:id="@+id/button2"
+                            android:id="@+id/teamButton"
                             android:layout_weight=".50"
                             android:layout_marginRight="-4.5dp"
                             android:layout_marginLeft="-4.5dp"
