--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,10 +13,10 @@
         android:id="@+id/username"
         android:hint = "Username"
         android:textColorHint="#FFFFFF"
-        android:layout_marginTop="108dp"
-        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
+        android:textColor="#ffffff" />
 
 
     <EditText
@@ -27,9 +27,10 @@
         android:id="@+id/password"
         android:hint = "Password"
         android:textColorHint="#FFFFFF"
+        android:gravity="center_horizontal"
         android:layout_below="@+id/username"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
@@ -37,8 +38,19 @@
         android:text="Login"
         android:id="@+id/login_button"
         android:background="@drawable/button_color"
-        android:layout_below="@+id/password"
-        android:layout_alignEnd="@+id/password"
-        android:layout_alignStart="@+id/password" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="@mipmap/logo"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/username"
+        android:layout_alignEnd="@+id/username" />
+
+
 
 </RelativeLayout>
