--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -10,10 +10,12 @@
     android:gravity="bottom"
     android:weightSum="1">
 
-    <ImageView android:layout_width="169dp" android:layout_height="wrap_content"
+    <ImageView android:layout_width="169dp"
+        android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:paddingLeft="-80dp"
-        android:src="@mipmap/logo_square" android:id="@+id/imageView"
+        android:src="@mipmap/logo_square"
+        android:id="@+id/imageView"
         android:layout_weight="0.92" />
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
