--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background">
+    android:background="@mipmap/background"
+    android:orientation="vertical">
 
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
         android:id="@+id/username"
-        android:hint = "Username"
-        android:textColorHint="#FFFFFF"
-        android:gravity="center_horizontal"
-        android:layout_below="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView2"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffff" />
+
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF" />
 
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/password"
-        android:hint = "Password"
-        android:textColorHint="#FFFFFF"
-        android:gravity="center_horizontal"
         android:layout_below="@+id/username"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffff" />
+
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF" />
 
     <Button
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/login_button"
-        android:background="@drawable/button_color"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/button_color"
+        android:text="Login"
         android:textColor="#ffffff" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@mipmap/logo"
+        android:layout_alignEnd="@+id/username"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/username"
-        android:layout_alignEnd="@+id/username" />
-
+        android:src="@mipmap/logo" />
 
 
 </RelativeLayout>
