meetmebutton add user

--- a/app/src/main/res/layout/meetme_prompt.xml
+++ b/app/src/main/res/layout/meetme_prompt.xml
@@ -35,10 +35,10 @@
     <Button
         android:id="@+id/dialogButtonOK"
         android:layout_width="100px"
-        android:layout_height="wrap_content"
+        android:layout_height="100px"
         android:layout_below="@+id/codeMeet"
         android:layout_centerHorizontal="true"
-        android:text=" Ok " />
+       android:background="@drawable/m_button" />
 
     <TextView
         android:id="@+id/ownCode"
@@ -47,5 +47,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Space
+        android:layout_width="20px"
+        android:layout_height="20px"
+        android:layout_below="@+id/dialogButtonOK"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
