--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -55,6 +55,7 @@
                             android:background="@drawable/rect_button"
                             android:textSize="20dp"
                             android:textStyle="bold"
+                            android:textColor="#ffffff"
                             />
 
                         <EditText
@@ -79,6 +80,7 @@
                             android:background="@drawable/rect_button"
                             android:textSize="20dp"
                             android:textStyle="bold"
+                            android:textColor="#ffffff"
                             />
 
                     </TableRow>
