--- a/app/src/main/res/layout/team_rank_layout.xml
+++ b/app/src/main/res/layout/team_rank_layout.xml
@@ -15,13 +15,15 @@
         android:fillViewport="false">
 
 
+
         <HorizontalScrollView
             android:id="@+id/hscrll1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="0px"
             android:layout_margin="0px"
-            android:fillViewport="true">
+            android:fillViewport="true"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,13 +35,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="0px"
-                    android:layout_marginTop="0px">
+                    android:layout_marginTop="0px"
+                    >
 
                     <TableRow
                         android:layout_width="fill_parent"
                         android:layout_height="match_parent"
 
-                        android:layout_marginTop="-7dp">
+                        android:layout_marginTop= "-7dp">
 
                         <Button
                             android:layout_width="0px"
@@ -52,7 +55,8 @@
                             android:background="@drawable/rect_button"
                             android:textSize="20dp"
                             android:textStyle="bold"
-                            android:textColor="#ffffff" />
+                            android:textColor="#ffffff"
+                            />
 
                         <EditText
                             android:layout_width="10px"
@@ -76,29 +80,30 @@
                             android:background="@drawable/rect_button"
                             android:textSize="20dp"
                             android:textStyle="bold"
-                            android:textColor="#ffffff" />
+                            android:textColor="#ffffff"
+                            />
 
                     </TableRow>
+                        <com.example.jansenmo.meetmeapp.CircleView
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal"
-
-                        >
-
-                        <TableLayout
-                            android:id="@+id/table_main"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"></TableLayout>
-
-                    </TableRow>
+                            android:layout_weight="100"
+                            android:padding="0dp"
+                            android:paddingLeft="0dp"
+                            android:paddingTop="0dp"
+                            android:paddingRight="0dp"
+                            android:paddingBottom="0dp"
+                            android:minHeight="700dp" />
                 </TableLayout>
+
+
             </LinearLayout>
         </HorizontalScrollView>
-    </ScrollView>
 
+
+
+    </ScrollView>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -110,3 +115,7 @@
         app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
+
+
+
+
