--- a/app/src/main/res/layout/meetme_prompt.xml
+++ b/app/src/main/res/layout/meetme_prompt.xml
@@ -5,40 +5,22 @@
     android:background="#dbdbdb">
 
 
-    <EditText
-        android:id="@+id/usernameMeet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="127dp"
-        android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="Foreign Username"
-        android:inputType="textPersonName"
-        android:textColorHint="#5379fa"
-        android:textSize="40px" />
 
     <EditText
         android:id="@+id/codeMeet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/usernameMeet"
-        android:layout_centerHorizontal="true"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="MeetMe Code"
         android:inputType="textPersonName"
         android:textColorHint="#5379fa"
-        android:textSize="40px" />
-
-    <Button
-        android:id="@+id/dialogButtonOK"
-        android:layout_width="100px"
-        android:layout_height="100px"
-        android:layout_below="@+id/codeMeet"
+        android:textSize="40px"
+        android:layout_below="@+id/ownCode"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/m_button" />
+        android:layout_marginTop="54dp" />
+
+
 
     <TextView
         android:id="@+id/ownCode"
@@ -55,5 +37,15 @@
         android:layout_height="20px"
         android:layout_below="@+id/dialogButtonOK"
         android:layout_centerHorizontal="true" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:text="MeetMe"
+        android:id="@+id/dialogButtonOK"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
