--- a/app/src/main/res/layout/team_rank_layout.xml
+++ b/app/src/main/res/layout/team_rank_layout.xml
@@ -94,7 +94,19 @@
                             android:paddingTop="0dp"
                             android:paddingRight="0dp"
                             android:paddingBottom="0dp"
-                            android:minHeight="700dp" />
+                            android:minHeight="400dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:id="@+id/textView9" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:id="@+id/textView10" />
                 </TableLayout>
 
 
