--- a/app/src/main/res/layout/meetme_prompt.xml
+++ b/app/src/main/res/layout/meetme_prompt.xml
@@ -6,6 +6,7 @@
 
 
 
+
     <EditText
         android:id="@+id/codeMeet"
         android:layout_width="wrap_content"
@@ -17,10 +18,15 @@
         android:textColorHint="#5379fa"
         android:textSize="40px"
         android:layout_below="@+id/ownCode"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/dialogButtonOK"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_below="@+id/codeMeet"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp" />
-
-
+        android:background="@drawable/m_button" />
 
     <TextView
         android:id="@+id/ownCode"
@@ -37,15 +43,5 @@
         android:layout_height="20px"
         android:layout_below="@+id/dialogButtonOK"
         android:layout_centerHorizontal="true" />
-
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:text="MeetMe"
-        android:id="@+id/dialogButtonOK"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
