--- a/app/src/main/res/layout/team_rank_layout.xml
+++ b/app/src/main/res/layout/team_rank_layout.xml
@@ -100,15 +100,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:id="@+id/textView9"
-                        android:text="TeamBlue:" />
+                        android:id="@+id/scoreTeamBlue"
+                        android:text="Team Blue: " />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:id="@+id/textView10"
-                        android:text="TeamRed:" />
+                        android:id="@+id/scoreTeamRed"
+                        android:text="Team Red: " />
                 </TableLayout>
 
 
